--- a/hugo.toml
+++ b/hugo.toml
@@ -1,43 +1,41 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
-title = "爱分享导航站"
+title = "NG/C7导航站"
+      <br>= "相信品牌的力量"
 theme = "hugo-webstack"
 
-#true:允许大写字母url路径，false:将url路径转换成小写
+# 是否允许大写字母URL路径，true：允许；false：转换为小写
 disablePathToLower = true
 
-#页脚：作者名字
-copyright = "afx"
+# 页脚版权信息
+copyright = "© 2025 NG/C7导航站 - 权威导航"
 
-#网站信息，不显示，仅供搜索引擎参考
+# 网站SEO信息（仅供搜索引擎参考）
 [params]
-  keywords = "网址导航,webstack,hugo,vpn,科学上网，免费节点，爱分享，科技共享"
-  description = "Webstack Hugo版主题,网址导航"
+  keywords = "NG娱乐,C7娱乐,游戏导航,官网入口,H5平台,线上娱乐平台,优惠活动"
+  description = "NG/C7导航站为您提供最新官网入口、安全便捷的H5平台以及丰富的优惠活动，是您畅玩游戏的最佳选择。"
 
-#是否开启搜索栏，true开启，false关闭
+# 是否开启搜索栏
 [params.search]
   enable = true
 
-#设置默认模式，true暗色模式，false亮色模式
+# 默认模式设置（true：暗色模式；false：亮色模式）
 [params.darkmode]
   enable = false
 
-#主页菜单栏显示在线编辑按钮（编辑github文件，适用于自动化部署的情况）
+# 在线编辑按钮设置
 [params.edit]
-  # true显示按钮，false不显示
-  enable = true
-  # github文件的远程链接，改成自己的
-  url = "https://github.com/afengxiang/afx/blob/main/data/webstack.yml"
-  
-#桌面端右上角code按钮
+  enable = false
+
+# GitHub代码按钮设置（显示或隐藏）
 [params.github]
-  enable = true #true显示 false隐藏
+  enable = true
   url = "https://github.com/oulh/nav"
   
-[permalinks]  
+# 自定义页面路径
+[permalinks]
   404 = "/404.html"
 
-#是否对本地搜索功能开启拼音匹配，true开启，false禁止。
-#拼音库体积337k，支持首字母匹配
+# 本地搜索功能的拼音匹配（true：开启；false：关闭）
 [params.pinyin]
   enable = true
