--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
-title = "🌐 NG/C7导航站 🚀 相信品牌的力量 💎"
+title = "NG/C7导航站🔥🔥🔥"
 theme = "hugo-webstack"
 
 # 是否允许大写字母URL路径，true：允许；false：转换为小写
