--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -35,7 +35,7 @@
       url: https://k92.cc
       description: 官方提供多款电子游戏平台试玩服务。
     - title: JDB电子试玩
-      logo: 
+      logo: images/logos/JDB.png
       url: https://www.jdbgaming.com
       description: 畅玩JDB经典电子游戏，真实体验。
     - title: PP电子试玩
