--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -32,7 +32,7 @@
   links:
     - title: 电子试玩网
       logo: images/logos/PG.png
-      url: https://k92.cc
+      url: https://hfuisahdl.com/page2/page_2.html
       description: 官方提供多款电子游戏平台试玩服务。
     - title: JDB电子试玩
       logo: images/logos/JDB.png
