--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -43,7 +43,7 @@
       url: https://super-pgslot.com
       description: PP电子游戏，感受创新与乐趣。
     - title: CQ9电子试玩
-      logo: 
+      logo: images/logos/CQ9.png
       url: https://demo.cqgame.games
       description: CQ9官方试玩平台，尽享娱乐盛宴。
     - title: BBIN系列
