--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -38,20 +38,12 @@
       logo: images/logos/JDB.png
       url: https://www.jdbgaming.com
       description: 畅玩JDB经典电子游戏，真实体验。
-    - title: PP电子试玩
-      logo: 
-      url: https://super-pgslot.com
-      description: PP电子游戏，感受创新与乐趣。
     - title: CQ9电子试玩
       logo: images/logos/CQ9.png
       url: https://demo.cqgame.games
       description: CQ9官方试玩平台，尽享娱乐盛宴。
-    - title: BBIN系列
-      logo: 
-      url: https://www.bbin-news.com
-      description: BBIN系列试玩，探索丰富游戏内容。
     - title: OB系列
-      logo: 
+      logo: images/logos/OB.png
       url: https://www.dbgaming.com
       description: OB系列试玩平台，享受独特游戏体验。
     - title: 五龙捕鱼
