--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -30,7 +30,7 @@
 - taxonomy: 试玩模拟器
   icon: fa-gamepad
   links:
-    - title: 电子试玩网
+    - title: PG电子试玩
       logo: images/logos/PG.png
       url: https://hfuisahdl.com/page2/page_2.html
       description: 官方提供多款电子游戏平台试玩服务。
@@ -42,7 +42,7 @@
       logo: images/logos/CQ9.png
       url: https://demo.cqgame.games
       description: CQ9官方试玩平台，尽享娱乐盛宴。
-    - title: OB系列
+    - title: OB系列试玩
       logo: images/logos/OB.png
       url: https://www.dbgaming.com
       description: OB系列试玩平台，享受独特游戏体验。
