--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -42,8 +42,8 @@
       logo: images/logos/CQ9.png
       url: https://demo.cqgame.games
       description: CQ9官方试玩平台，尽享娱乐盛宴。
-    - title: OB系列试玩
-      logo: images/logos/OB.png
+    - title: DB系列试玩
+      logo: images/logos/DB.png
       url: https://www.dbgaming.com
       description: OB系列试玩平台，享受独特游戏体验。
     - title: 五龙捕鱼
