--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -1,5 +1,5 @@
 ---
-- taxonomy: 热门推荐
+- taxonomy: 热门推荐 🌟
   icon: fa-star
   links: 
     - title: NG娱乐官网
@@ -27,7 +27,7 @@
       url: https://h5.c7h5gq.com/
       description: C7娱乐移动端平台，操作便捷，轻松畅玩。
 
-- taxonomy: 试玩模拟器
+- taxonomy: 免费试玩平台 🎮
   icon: fa-gamepad
   links:
     - title: PG电子试玩
@@ -70,56 +70,8 @@
       logo: images/logos/EVO.png
       url: https://www.evolution.com
       description: 领先的真人娱乐平台，提供沉浸式试玩体验。
-    - title: BBIN电子试玩
-      logo: images/logos/BBIN.png
-      url: https://www.bbin.com
-      description: 亚洲领先的电子游戏平台，提供丰富多样的试玩游戏。
-    - title: SG电子试玩
-      logo: images/logos/SG.png
-      url: https://www.sggaming.com
-      description: SG官方游戏平台，提供全球知名的电子游戏免费试玩。
-    - title: KA电子试玩
-      logo: images/logos/KA.png
-      url: https://www.kagaming.com
-      description: KA游戏平台试玩服务，感受多元化的娱乐内容。
-    - title: BG真人试玩
-      logo: images/logos/BG.png
-      url: https://www.bg-gaming.com
-      description: BG真人娱乐平台，提供专业高端的真人游戏试玩。
-    - title: WM真人试玩
-      logo: images/logos/WM.png
-      url: https://www.wm-gaming.com
-      description: WM真人游戏平台，体验沉浸式真人娱乐服务。
-    - title: ISB电子试玩
-      logo: images/logos/ISB.png
-      url: https://www.isbgaming.com
-      description: ISB平台提供全方位的试玩服务，游戏丰富多样。
-    - title: YGG电子试玩
-      logo: images/logos/YGG.png
-      url: https://www.yggdrasilgaming.com
-      description: YGG全球知名游戏平台，享受独具特色的游戏内容。
-    - title: 金殿试玩
-      logo: images/logos/GoldPalace.png
-      url: https://www.goldpalace.com
-      description: 提供丰富多样的电子与真人游戏试玩体验。
-    - title: 老虎机试玩
-      logo: images/logos/SlotMachine.png
-      url: https://www.slotmachine.com
-      description: 专业老虎机游戏试玩平台，体验经典与现代玩法。
-    - title: 龙腾电子试玩
-      logo: images/logos/Dragon.png
-      url: https://www.dragon-gaming.com
-      description: 龙腾游戏平台提供多种电子游戏免费试玩服务。
-    - title: 至尊试玩
-      logo: images/logos/Supreme.png
-      url: https://www.supremegaming.com
-      description: 至尊娱乐试玩平台，涵盖多种精彩游戏类型。
-    - title: 星罗试玩
-      logo: images/logos/Star.png
-      url: https://www.stargaming.com
-      description: 星罗游戏平台试玩入口，轻松体验多样化娱乐内容。
       
-- taxonomy: 深夜娱乐资源
+- taxonomy: 深夜娱乐资源 🌙
   icon: fa-moon
   links:
     - title: 福利吧
@@ -159,13 +111,13 @@
       url: https://www.jilezy.com
       description: 提供深夜精选资源，实时更新，内容全面。
       
-- taxonomy: 在线电影网站
+- taxonomy: 在线电影网站 🎥
   icon: fa-film
   links:
     - title: 人人影视
       logo: 
       url: https://www.yyets.com
-      description: 提供丰富的海外影视资源，支持在线免费观看和下载，无需会员。
+      description: 提供丰富的海外影视资源，支持在线免费观看和下载。
     - title: 哔嘀影视
       logo: 
       url: https://www.bde4.com
@@ -186,84 +138,68 @@
       logo: 
       url: https://www.555dy.com
       description: 一个老牌免费视频网站，更新快速，支持在线点播。
+    - title: 星辰影院
+      logo: 
+      url: https://www.vodxc.com
+      description: 免费影视点播网站，支持高清影片播放，无需会员。
+    - title: 电影蜜蜂
+      logo: 
+      url: https://www.dianyingmf.com
+      description: 高质量电影分享平台，提供多类型影视资源。
+    - title: 天天美剧
+      logo: 
+      url: https://www.ttmeiju.vip
+      description: 专注美剧资源，提供高清美剧下载与在线观看。
+    - title: 爱追剧
+      logo: 
+      url: https://www.aizhuiju.com
+      description: 国内热门剧集观看平台，支持最新电视剧资源更新。
 
-- taxonomy: 短视频平台
+- taxonomy: 短视频平台 🎬
   icon: fa-video
   links:
     - title: 抖音
       logo: 
       url: https://www.douyin.com/
-      description: 国内最火爆的短视频平台，拥有丰富的娱乐、知识分享和生活内容。
+      description: 国内最火爆的短视频平台，涵盖娱乐、生活、知识等多种内容。
     - title: 快手
       logo: 
       url: https://www.kuaishou.com/
-      description: 主打真实生活记录，涵盖短视频、直播等内容，用户基础广泛。
-    - title: 哔哩哔哩（B站）
-      logo: 
-      url: https://www.bilibili.com/
-      description: 知名视频内容社区，短视频内容涵盖动漫、生活和创意领域。
+      description: 记录和分享真实生活，提供短视频和直播内容。
     - title: 小红书
       logo: 
       url: https://www.xiaohongshu.com/
-      description: 短视频与社交分享结合的种草平台，覆盖美妆、旅行、时尚等生活方式。
-    - title: 微视
+      description: 集短视频、图文和种草分享于一体的综合平台。
+    - title: 哔哩哔哩
       logo: 
-      url: https://weishi.qq.com/
-      description: 腾讯推出的短视频平台，支持音乐特效和社交分享。
+      url: https://www.bilibili.com/
+      description: 知名视频社区，提供动漫、生活、创意短视频等多样化内容。
+    - title: 视频号
+      logo: 
+      url: https://mp.weixin.qq.com/
+      description: 微信推出的短视频平台，与朋友圈、公众号联动，便于传播。
     - title: 西瓜视频
       logo: 
       url: https://www.ixigua.com/
-      description: 字节跳动旗下的综合性视频平台，提供短视频和中长视频内容。
-    - title: 皮皮虾
+      description: 字节跳动旗下的视频平台，提供短视频与中长视频内容。
+    - title: 微视
       logo: 
-      url: https://pipix.com/
-      description: 主打搞笑和社区互动的短视频平台，内容以段子和娱乐为主。
-    - title: 视频号
-      logo: 
-      url: https://weixin.qq.com/
-      description: 微信推出的短视频功能，直接与朋友圈和公众号关联，便于传播。
-    - title: 抖音极速版
-      logo: 
-      url: https://www.douyin.com/
-      description: 抖音推出的轻量版短视频平台，适合追求流畅体验的用户。
-    - title: Kuaishou极速版
-      logo: 
-      url: https://www.kuaishou.com/
-      description: 快手的极速版，功能精简但同样支持短视频浏览和分享。
-    - title: 逗拍
-      logo: 
-      url: https://www.doupai.cc/
-      description: 一款简单易用的视频创作平台，适合制作短视频或搞笑视频。
-    - title: 趣头条
-      logo: 
-      url: https://www.qutoutiao.net/
-      description: 内容聚合平台，短视频和资讯内容结合，适合碎片化阅读。
+      url: https://weishi.qq.com/
+      description: 腾讯推出的短视频应用，支持音乐、特效和社交分享。
     - title: 火山小视频
       logo: 
       url: https://www.huoshan.com/
-      description: 主打短视频拍摄、分享，内容以娱乐和生活为主。
-    - title: 今日头条
-      logo: 
-      url: https://www.toutiao.com/
-      description: 综合内容平台，提供短视频、新闻、热点资讯的个性化推荐。
+      description: 主打娱乐生活的短视频平台，内容轻松有趣。
     - title: 美拍
       logo: 
       url: https://www.meipai.com/
-      description: 主打美颜和特效短视频的制作与分享，广受年轻人喜爱。
-    - title: 小咖秀
-      logo: 
-      url: https://www.xiaokaxiu.com/
-      description: 短视频平台，主打对口型模仿和创意表演，适合娱乐创作。
+      description: 专注于美颜和特效短视频制作，适合年轻人群。
     - title: 秒拍
       logo: 
       url: https://www.miaopai.com/
-      description: 老牌短视频平台，支持短视频拍摄、编辑和快速分享。
-    - title: 微博故事
-      logo: 
-      url: https://www.weibo.com/
-      description: 微博的短视频功能，支持随时分享生活点滴。
-
-- taxonomy: 论坛推荐
+      description: 老牌短视频平台，支持视频拍摄、编辑和快速分享。
+      
+- taxonomy: 论坛推荐 💬
   icon: fa-comments
   links:
     - title: 虎扑社区
@@ -291,10 +227,10 @@
       url: https://bbs.tianya.cn/
       description: 经典的综合性论坛，涵盖情感、社会热点、文学等多个板块。
 
-- taxonomy: 社交&资讯
+- taxonomy: 社交&资讯 📱
   icon: fa-comments
   links:
-    - title: 纸飞机
+    - title: 纸飞机（需要VPN）
       logo: 
       url: https://telegram.org
       description: 全球领先的加密即时通讯工具，保障您的隐私与安全。
@@ -315,7 +251,7 @@
       url: https://wuquan.com
       description: 新兴社交平台，主打兴趣圈子和即时互动，构建有趣的社交生态。
       
-- taxonomy: 虚拟币软件
+- taxonomy: 虚拟币软件 💰
   icon: fa-tools
   links:
     - title: 火币
@@ -334,14 +270,10 @@
       logo: 
       url: https://token.im
       description: 高效便捷的多币种数字资产交易平台，满足多样化需求。
-    - title: 虚拟币使用教程
-      logo: 
-      url: https://www.example.com/crypto-tutorial-china
-      description: 面向中国用户的虚拟币入门教程，包含账户注册、交易流程、风险管理等详细讲解。
       
-- taxonomy: VPN加速器
+- taxonomy: VPN加速器 🌐
   icon: fa-tools
-  links: 
+  links:
     - title: 爱加速
       logo: 
       url: https://www.91ajs.com
@@ -362,12 +294,8 @@
       logo: 
       url: https://apps.apple.com/us/app/shadowrocket/id932747118
       description: 强大的网络代理工具，适用于苹果设备，支持多协议并提供高自由度的配置功能。
-    - title: VPN使用教程
-      logo: 
-      url: https://www.example.com/vpn-tutorial
-      description: 详细讲解VPN的基础知识、安装流程及使用技巧，适合新手用户。
       
-- taxonomy: 虚拟服务与工具
+- taxonomy: 国外ID短信接码 🔧
   icon: fa-tools
   links: 
     - title: 苹果国外ID购买网站
@@ -379,7 +307,7 @@
       url: https://sms-activate.org
       description: 专业的接码平台，支持全球虚拟号码接收验证码服务，便捷高效。
      
-- taxonomy: 短视频剪辑软件
+- taxonomy: 短视频剪辑 🎬
   icon: fa-video
   links:
     - title: 剪映
@@ -407,7 +335,7 @@
       url: https://yitian.qq.com/
       description: 支持视频拍摄和剪辑的工具，内置丰富的滤镜和美化效果。
       
-- taxonomy: 实用工具
+- taxonomy: 实用工具 🔧
   icon: fa-tools
   links:
     - title: 站长工具
